--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
     "cssVariables": true,
     "prefix": ""
   },
-  "iconLibrary": "hugeicons",
+  "iconLibrary": "lucide-react",
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
