--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome check --unsafe --write"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
