--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "react-timer-hook": "^4.0.5",
     "recharts": "2.15.4",
     "shadcn": "^3.7.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.13",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/howler": "^2.2.12",
     "@types/node": "^25.1.0",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
