--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
-    "next": "16.1.6",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
-    "react": "19.2.4",
-    "react-dom": "19.2.4",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-timer-hook": "^4.0.5",
-    "recharts": "2.15.4",
+    "recharts": "^2.15.4",
     "shadcn": "^3.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -29,13 +29,13 @@
     "use-sound": "^5.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.13",
+    "@biomejs/biome": "^2.3.14",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/howler": "^2.2.12",
     "@types/node": "^25.2.0",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
-    "babel-plugin-react-compiler": "1.0.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "husky": "^9.1.7",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
