--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "husky": "^9.1.7",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
-  }
+  },
+  "browserslist": [
+    "chrome 111",
+    "safari 16.4",
+    "firefox 128"
+  ]
 }
