--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@icons-pack/react-simple-icons": "^13.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
@@ -21,7 +22,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-timer-hook": "^4.0.5",
-    "recharts": "^2.15.4",
+    "recharts": "2.15.4",
     "shadcn": "^3.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
